--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@clashmaster/web",
   "version": "1.0.1",
+  "description": "A modern and elegant dashboard for network traffic visualization and analysis.",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
@@ -16,6 +17,7 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@tanstack/react-query": "^5.90.20",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@xyflow/react": "^12.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +31,7 @@
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^9.13.1",
     "react-dom": "^19.2.0",
     "react-simple-maps": "^3.0.0",
