--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clash-master",
-  "version": "1.1.4",
+  "version": "1.1.5",
+  "description": "A modern and elegant dashboard for network traffic visualization and analysis.",
   "private": true,
   "workspaces": [
     "apps/*",
