--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,10 +2,10 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main, dev, 'preview/**' ]
-    tags: [ 'v*' ]
+    branches: [main, dev, "preview/**"]
+    tags: ["v*"]
   pull_request:
-    branches: [ main, dev ]
+    branches: [main, dev]
   workflow_dispatch:
 
 env:
@@ -21,85 +21,85 @@ jobs:
       packages: write
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Read version from package.json
-      id: pkg
-      run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+      - name: Read version from package.json
+        id: pkg
+        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
-    - name: Derive preview tag for preview/* branches
-      id: preview
-      shell: bash
-      run: |
-        if [[ "${GITHUB_REF_TYPE}" == "branch" && "${GITHUB_REF_NAME}" == preview/* ]]; then
-          raw="${GITHUB_REF_NAME#preview/}"
-          safe="$(echo "${raw}" | tr '[:upper:]' '[:lower:]' | sed 's#[^a-z0-9._-]#-#g')"
-          echo "enabled=true" >> "$GITHUB_OUTPUT"
-          echo "tag=dev-${safe}" >> "$GITHUB_OUTPUT"
-        else
-          echo "enabled=false" >> "$GITHUB_OUTPUT"
-          echo "tag=" >> "$GITHUB_OUTPUT"
-        fi
+      - name: Derive preview tag for preview/* branches
+        id: preview
+        shell: bash
+        run: |
+          if [[ "${GITHUB_REF_TYPE}" == "branch" && "${GITHUB_REF_NAME}" == preview/* ]]; then
+            raw="${GITHUB_REF_NAME#preview/}"
+            safe="$(echo "${raw}" | tr '[:upper:]' '[:lower:]' | sed 's#[^a-z0-9._-]#-#g')"
+            echo "enabled=true" >> "$GITHUB_OUTPUT"
+            echo "tag=dev-${safe}" >> "$GITHUB_OUTPUT"
+          else
+            echo "enabled=false" >> "$GITHUB_OUTPUT"
+            echo "tag=" >> "$GITHUB_OUTPUT"
+          fi
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Log in to Docker Hub
-      if: github.event_name != 'pull_request'
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Log in to GitHub Container Registry
-      if: github.event_name != 'pull_request'
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: |
-          ${{ env.DOCKERHUB_IMAGE_OLD }}
-          ${{ env.DOCKERHUB_IMAGE_NEW }}
-          ${{ env.GHCR_IMAGE }}
-        tags: |
-          type=raw,value=latest,enable=${{ github.ref_name == 'main' }}
-          type=raw,value=${{ steps.pkg.outputs.version }},enable=${{ github.ref_name == 'main' }}
-          type=raw,value=${{ steps.preview.outputs.tag }},enable=${{ steps.preview.outputs.enabled == 'true' }}
-          type=semver,pattern={{version}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
-          type=semver,pattern={{major}}.{{minor}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
-          type=ref,event=pr
-          type=sha,prefix=,enable={{is_default_branch}}
-          type=raw,value=dev,enable=${{ github.ref_name == 'dev' }}
-          type=raw,value=${{ steps.pkg.outputs.version }}-dev,enable=${{ github.ref_name == 'dev' }}
-          type=sha,prefix=dev-,enable=${{ github.ref_name == 'dev' }}
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ env.DOCKERHUB_IMAGE_OLD }}
+            ${{ env.DOCKERHUB_IMAGE_NEW }}
+            ${{ env.GHCR_IMAGE }}
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref_name == 'main' }}
+            type=raw,value=${{ steps.pkg.outputs.version }},enable=${{ github.ref_name == 'main' }}
+            type=raw,value=${{ steps.preview.outputs.tag }},enable=${{ steps.preview.outputs.enabled == 'true' }}
+            type=semver,pattern={{version}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=semver,pattern={{major}}.{{minor}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=ref,event=pr
+            type=sha,prefix=,enable={{is_default_branch}}
+            type=raw,value=dev,enable=${{ github.ref_name == 'dev' }}
+            type=raw,value=${{ steps.pkg.outputs.version }}-dev,enable=${{ github.ref_name == 'dev' }}
+            type=sha,prefix=dev-,enable=${{ github.ref_name == 'dev' }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64,linux/arm64
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
 
-    - name: Update Docker Hub description
-      if: github.event_name != 'pull_request' && github.ref_name == 'main'
-      uses: peter-evans/dockerhub-description@v4
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        repository: foru17/neko-master
-        readme-filepath: ./README.md
-        short-description: "Modern Network Traffic Analytics"
+      - name: Update Docker Hub description
+        if: github.event_name != 'pull_request' && github.ref_name == 'main'
+        uses: peter-evans/dockerhub-description@v4
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: foru17/neko-master
+          readme-filepath: ./README.md
+          short-description: "Modern traffic analytics for edge gateways"
