--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neko-master",
   "version": "1.2.0",
-  "description": "Modern Network Traffic Analytics",
+  "description": "Modern traffic analytics for edge gateways",
   "private": true,
   "workspaces": [
     "apps/*",
