--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@neko-master/shared": "workspace:*",
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@neko-master/shared": "workspace:*",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
@@ -47,6 +47,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/postcss": "^4.1.0",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
