feat: Add comprehensive testing infrastructure and refine collector services with minor web UI adjustments.

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,13 @@ WS_EXTERNAL_PORT=3002
 # 一般不需要修改容器内部端口（WEB_PORT/API_PORT/COLLECTOR_WS_PORT）。
 
 # -----------------------------------------------------------------------------
+# 安全配置
+# -----------------------------------------------------------------------------
+# Cookie 签名密钥（生产环境必填，建议 32 位以上随机字符串）
+# 可使用 openssl rand -hex 32 生成
+# COOKIE_SECRET=
+
+# -----------------------------------------------------------------------------
 # 高级配置（一般不需要修改）
 # -----------------------------------------------------------------------------
 # 内部端口（容器内使用，除非你知道自己在做什么，否则不要改）
